tests/baselines/reference/invokingNonGenericMethodWithTypeArguments1.errors.txt
tests/cases/compiler/invokingNonGenericMethodWithTypeArguments1.ts(3,14): error TS2339: Property 'foo' does not exist on type 'Foo'.


==== tests/cases/compiler/invokingNonGenericMethodWithTypeArguments1.ts (1 errors) ====
    class Foo {
        constructor() {
            this.foo<string>();
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Foo'.
        }
    }
    